[*] BO : fix footer overflow + update schemes

--- a/admin-dev/themes/default/sass/partials/_content.sass
+++ b/admin-dev/themes/default/sass/partials/_content.sass
@@ -193,3 +193,9 @@ body.display-modal
 	overflow-x: hidden
 	@media (max-width: $screen-lg)
 		display: none	
+
+.page-topbar
+	#help-container
+		margin-top: 140px
+
+
